--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,4 +25,5 @@ jobs:
     inputs:
       testResultsFormat: 'JUnit'
       testResultsFiles: '**/results/test-results.xml'
-      failTaskOnFailedTests: true
+    displayName: 'Publish Test Results'
+    condition: succeededOrFailed()
