Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,4 @@ jobs:
     inputs:
       PathtoPublish: '$(System.defaultworkingdirectory)/results'
       ArtifactName: TestScreenshots
+    condition: succeededOrFailed()
