--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,10 @@ jobs:
       testResultsFiles: '**/results/test-results.xml'
     displayName: 'Publish Test Results'
     condition: succeededOrFailed()
+  
+  - task: PublishHtmlReport@1
+    inputs:
+      reportDir: 'results'
 
   - task: ArchiveFiles@2
     inputs:
