Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
   
   - task: PublishHtmlReport@1
     inputs:
-      reportDir: 'results'
+      reportDir: 'results/test-results.html'
     displayName: 'Publish Playwright Testreport'
     condition: succeededOrFailed()
 
