Added BDD framework

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test:e2e": "cucumber-js --require cucumber.config.js --require tests/acceptance/stepDefinitions/**/*.js --format @cucumber/pretty-formatter"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/phjfranssen/demoplaywright.git"
@@ -16,6 +18,9 @@
   },
   "homepage": "https://github.com/phjfranssen/demoplaywright#readme",
   "devDependencies": {
-    "@playwright/test": "^1.25.1"
+    "@cucumber/cucumber": "^7.3.1",
+    "@cucumber/pretty-formatter": "^1.0.0",
+    "@playwright/test": "^1.25.1",
+    "playwright": "^1.25.1"
   }
 }
