--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:e2e": "cucumber-js --require cucumber.config.js --require tests/acceptance/stepDefinitions/**/*.js --format @cucumber/pretty-formatter"
+    "test:e2e": "cucumber-js --require cucumber.config.js --require tests/acceptance/stepDefinitions/**/*.js --format @cucumber/pretty-formatter -f html:test-results/cucumber_report.html"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
     "@cucumber/pretty-formatter": "^1.0.0",
     "@playwright/test": "^1.25.1",
     "playwright": "^1.25.1"
+  },
+  "dependencies": {
+    "@types/cucumber-html-reporter": "^5.0.1",
+    "cucumber-html-reporter": "^5.5.0"
   }
 }
