--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,11 +18,11 @@ jobs:
     displayName: 'Npm install and install playwright'
 
   - script: |
-      npx playwright test
+      npm run test:spec
     displayName: 'Run Playwright tests - Spec Form'
     
   - script: |
-      npm run test:e2e tests/acceptance/features/obvion.feature
+      npm run test:bdd
     displayName: 'Run Playwright tests - BDD Form'
     condition: succeededOrFailed()
 
