Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ jobs:
 
   - script: |
       npm run test:spec
+      npm run test:structured
     displayName: 'Run Playwright tests - Spec Form'
     
   - script: |
